# kosen-ar-project

./: .gitignore  README.md  index.html
.github/workflows/: deploy-gh-pages.yml
backend/: esbuild.config.js  main.js  package-lock.json  package.json
backend/src/: index.js  index.ts
convert/: .gitignore  main.py
create-models/: .gitignore  README.md  yolo_export.py  yolo_test.py
create-models/annotation/: .gitignore  README.md
create-models/annotation/labelImg-master/: labelImg.py
create-models/convert/: README.md  main.py  pyproject.toml  yolo.py  yolo_export.py  yolo_test.py
create-models/training/: .gitignore  README.md  YOLO_training.ipynb  dataset.yaml  main.py  pyproject.toml
frontend/: .gitignore  .prettierignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/3d-models/: mike.glb  penlight(g).glb  penlight(o).glb  penlight_b.glb  penlight_p.glb  penlight_r.glb  penlight_s.glb  penlight_w.glb  penlight_y.glb  star.glb
frontend/src/: index.css  index.ts
frontend/src/functions/: animate.ts  calculateVideoDisplayArea.ts  createOnnxSession.ts  createTensor.ts  drawDetections.ts  getOrtRuntime.ts  get_onnx_Model.ts  inferOnnxModel.ts  normalizeImage.ts  postprocess.ts  setupCameraControls.ts  startCamera.ts  takePicture.ts
frontend/src/functions/wasm/: package.json
frontend/src/functions/wasm/assembly/: index.ts
frontend/src/worker/: inferWorker.ts
