[project]
name = "convert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnx>=1.12.0,<1.18.0",
    "onnx-graphsurgeon>=0.5.8",
    "onnxruntime>=1.22.1",
    "onnxslim>=0.1.64",
    "sng4onnx>=1.0.4",
    "ultralytics>=8.3.176",
]
